# gm-apprentice

./: .gitignore  .markdownlint.yaml  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  LICENSE-CODE  README.md  ROADMAP.md  go.mod
docs/prototypes/mobrpg/: .gitignore  CLI-GAPS.md  CLI-HANDOFF.md  COMPLETE-SUGGESTIONS-SPEC.md  COMPOUND-SUGGEST-DESIGN.md  FINDINGS.md  PILLAR3-WRITEBACK-DESIGN.md  PROVENANCE.md  README.md  RED-TEAM-PROMPT.md  assign_types.py  canticle-regency-crosswalk.json  detect_updates.py  etl_extract.py  gm-apprentice-ontology-export.md  gm-apprentice-ontology.json  integration-log.md  llms.txt  merge_overlaps.py  orphan_link.py  pull_images.py  push_relationships.py  push_suggestions.py  push_to_mobrpg.py  pyproject.toml  schema-map.md  smoketest.py  space_extract.json  vault_write.py
docs/prototypes/mobrpg/mobrpg/: cli.py  client.py  config.py  md.py  merge3.py  node.py  section.py
docs/prototypes/mobrpg/orphan_link_out/: mobrpg-add-relationships.sh  orphan-linking-report.md  orphan-linking.json
docs/prototypes/mobrpg/push_out/: assign-types-log.json  push-chapter-1.json  push-chapter-2.json  relationships-chapter-1.json
docs/prototypes/mobrpg/skill/: SKILL.md
docs/prototypes/mobrpg/tests/: test_adopt.py  test_auth.py  test_backfill.py  test_catalog.py  test_cli.py  test_client.py  test_client_auth.py  test_config.py  test_llms.py  test_map.py  test_md.py  test_merge3.py  test_node.py  test_pull.py  test_pull_canon.py  test_pull_desc.py  test_rel_baseline.py  test_relink.py  test_review.py  test_section.py  test_submit_batch.py  test_suggest.py  (+6 more)
(+1098 files in other folders)
